ENH:Cleaned up cation widget; performance

--- a/Widgets/CMakeLists.txt
+++ b/Widgets/CMakeLists.txt
@@ -17,6 +17,8 @@ vtkAngleRepresentation.cxx
 vtkAngleRepresentation2D.cxx
 vtkAngleRepresentation3D.cxx
 vtkAngleWidget.cxx
+vtkAxesTransformWidget.cxx
+vtkAxesTransformRepresentation.cxx
 vtkBalloonRepresentation.cxx
 vtkBalloonWidget.cxx
 vtkBezierContourLineInterpolator.cxx
