Set CMake 2.8.4 policy CMP0017 to NEW
CMake 2.8.4 introduces policy CMP0017 to ensure that builtin Modules
include their correct dependencies.  Tell CMake this is okay for VTK.

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -1,8 +1,10 @@
+CMAKE_MINIMUM_REQUIRED(VERSION 2.6.3 FATAL_ERROR)
+IF(POLICY CMP0017)
+  CMAKE_POLICY(SET CMP0017 NEW)
+ENDIF()
+
 PROJECT(VTKExamples)
 INCLUDE_REGULAR_EXPRESSION("^.*$")
-
-# VTK examples now require CMake 2.4 or higher.
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6.3)
 
 IF(NOT VTK_BINARY_DIR)
 FIND_PACKAGE(VTK REQUIRED)
