Supress additional boost warnings.

--- a/CMake/CTestCustom.ctest.in
+++ b/CMake/CTestCustom.ctest.in
@@ -232,6 +232,8 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   "boost.*warning.*signed/unsigned mismatch"
   "boost.*warning.*conversion from .* to .*, possible loss of data"
   "boost.*warning.*declaration of .* shadows a member of"
+  "boost.*warning.*unused parameter"
+  "boost.*warning.*comparison between signed and unsigned integer expressions"
 
   "Utilities.vtklibproj4.*warning.*defined but not used"
   "Utilities.vtklibproj4.*warning.*initialization discards qualifiers from pointer target type"
