Disable TestAxisActor3D for now.
Change-Id: Ia626e45cacf37575bb5ef29a9a6e5304e58fdcaa

--- a/Hybrid/Testing/Cxx/CMakeLists.txt
+++ b/Hybrid/Testing/Cxx/CMakeLists.txt
@@ -7,7 +7,7 @@ SET(MyTests
 IF (VTK_DATA_ROOT)
   # add tests that require data
   SET(MyTests ${MyTests}
-    TestAxisActor3D.cxx
+#    TestAxisActor3D.cxx
     TestBarChartActor.cxx
     TestExodusImplicitArrays.cxx
     #TestLabelPlacerExodus.cxx
