Widgets: Cleanup Whitespace and warnings.
Change-Id: Ia461dc3cd4ebfbe6412e514306f17adfb2e447cc

--- a/Widgets/Testing/Cxx/CMakeLists.txt
+++ b/Widgets/Testing/Cxx/CMakeLists.txt
@@ -5,7 +5,6 @@ SET(KIT Widgets)
 #
 IF(VTK_USE_DISPLAY)
 
-
 # add tests that do not require data
 SET(MyTests
   BoxWidget.cxx
@@ -29,7 +28,7 @@ SET(MyTests
   TestImplicitPlaneWidget2b.cxx
 #  TestLogoWidget.cxx
   TestOrientationMarkerWidget.cxx
-#  TestPlaybackWidget.cxx
+  TestPlaybackWidget.cxx
   TestProgrammaticPlacement.cxx
   TestRectilinearWipeWidget.cxx
   TestSeedWidget.cxx
