ENH: Part 2 of the MultiThread-SpaceLeaping-VolumeRendering-Feature
Please see comments for the branch:
  MultiThread-SpaceLeaping-VolumeRendering-Feature

--- a/VolumeRendering/CMakeLists.txt
+++ b/VolumeRendering/CMakeLists.txt
@@ -28,6 +28,7 @@ vtkFixedPointVolumeRayCastCompositeShadeHelper.cxx
 vtkFixedPointVolumeRayCastHelper.cxx
 vtkFixedPointVolumeRayCastMIPHelper.cxx
 vtkFixedPointVolumeRayCastMapper.cxx
+vtkVolumeRayCastSpaceLeapingImageFilter.cxx
 vtkGPUVolumeRayCastMapper.cxx
 vtkHAVSVolumeMapper.cxx
 vtkProjectedAAHexahedraMapper.cxx
