--- a/Common/Testing/Cxx/CMakeLists.txt
+++ b/Common/Testing/Cxx/CMakeLists.txt
@@ -18,6 +18,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   TestMath.cxx
   TestMatrix3x3.cxx
   TestMinimalStandardRandomSequence.cxx
+  TestNew.cxx
   TestObservers.cxx
   TestPolynomialSolversUnivariate.cxx
   TestSmartPointer.cxx
