--- a/Common/Testing/Cxx/CMakeLists.txt
+++ b/Common/Testing/Cxx/CMakeLists.txt
@@ -31,7 +31,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   EXTRA_INCLUDE vtkTestDriver.h
 )
 
-ADD_EXECUTABLE(${KIT}CxxTests ${Tests})
+ADD_EXECUTABLE(${KIT}CxxTests ${Tests} vtkTestNewVar.cxx)
 TARGET_LINK_LIBRARIES(${KIT}CxxTests vtkCommon)
 
 SET (TestsToRun ${Tests})
