COMP: Exclude vtkNew.h from header testing.
Pure templated class, not a vtkObject...

Change-Id: I42fa51630109e87a2626b293fb712b27a09a7f23

--- a/Common/Testing/CMakeLists.txt
+++ b/Common/Testing/CMakeLists.txt
@@ -64,6 +64,7 @@ IF(PYTHON_EXECUTABLE)
     vtkLargeInteger.h
     vtkLinkedList.h
     vtkLinkedListIterator.h
+    vtkNew.h
     vtkOStrStreamWrapper.h
     vtkOStreamWrapper.h
     vtkObject.h
