COMP: fixed a whole bunch of clang dashboard warnings

--- a/Utilities/vtkalglib/alglib/ap.h.in
+++ b/Utilities/vtkalglib/alglib/ap.h.in
@@ -383,12 +383,14 @@ public:
 
     int getlowbound(int iBoundNum = 0) const
     {
+        (void)iBoundNum;
         return m_iLow;
     };
 
 
     int gethighbound(int iBoundNum = 0) const
     {
+        (void)iBoundNum;
         return m_iHigh;
     };
 
