ENH: Introduce AMR-Kit & Base/Utility Classes
Introduce AMR-Kit in to the build and two additional
classes: (a) vtkSerializable and (b) vtkAssertUtils.
The AMR-Kit is geared towards encapsulating all of
the AMR infrastructure & algorithms. vktSerializable
defines a pure abstract interface for all serializable
objects. Last, the vtkAssertUtils is a singleton class
provides functionality for self-checking that is enabled
only when -DASSERT_ON is provided.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1315,6 +1315,7 @@ ADD_SUBDIRECTORY(  Imaging )
 ADD_SUBDIRECTORY(  Graphics )
 ADD_SUBDIRECTORY(  GenericFiltering )
 ADD_SUBDIRECTORY(  IO )
+ADD_SUBDIRECTORY(  AMR )
 
 IF(VTK_USE_RENDERING)
   ADD_SUBDIRECTORY(Rendering)
