--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -19,6 +19,7 @@ ENDIF (UNIX)
 
 SET( Kit_SRCS
 vtkAbstractArray.cxx
+vtkSerializable.cxx
 vtkAbstractTransform.cxx
 vtkAmoebaMinimizer.cxx
 vtkAnimationCue.cxx
@@ -334,6 +335,7 @@ SET(Kit_WRAP_HEADERS
 SET_SOURCE_FILES_PROPERTIES(
 # vtkObjectBase is marked ABSTRACT so that instantiators are happy.
 vtkAbstractArray
+vtkSerializable
 vtkArrayIterator
 vtkArrayIteratorTemplate
 vtkAbstractTransform
@@ -406,7 +408,8 @@ SET_SOURCE_FILES_PROPERTIES(
   vtkVariant.cxx
   vtkWeakPointerBase.cxx
   vtkUnicodeString.cxx
-
+  vtkSerializable.cxx
+  
   WRAP_EXCLUDE
 )
 
