ENH: Added circle packing layout classes to VTK.
The vtkCirclePackLayout filter is similar to the area layout
filter in Infovis and produces a triple for each vertex in
an input vtkTree.  The triple represents the (X, Y, Radius)
of the circle for that vertex.  There is a concrete implementation
of the vtkCirclePackLayoutStrategy class for a "front chain"
based circle packing layout.  There is also a regression test
for the layout classes and a poly data mapper class for the
packed circle layout.

--- a/Infovis/CMakeLists.txt
+++ b/Infovis/CMakeLists.txt
@@ -32,6 +32,10 @@ vtkBivariateLinearTableThreshold.cxx
 vtkBivariateStatisticsAlgorithm.cxx
 vtkBoxLayoutStrategy.cxx
 vtkChacoGraphReader.cxx
+vtkCirclePackFrontChainLayoutStrategy.cxx
+vtkCirclePackLayout.cxx
+vtkCirclePackLayoutStrategy.cxx
+vtkCirclePackToPolyData.cxx
 vtkCircularLayoutStrategy.cxx
 vtkClustering2DLayoutStrategy.cxx
 vtkCollapseGraph.cxx
@@ -251,6 +255,7 @@ ENDIF(VTK_HAS_UINT64_ARRAY)
 SET_SOURCE_FILES_PROPERTIES(
 vtkAreaLayoutStrategy.cxx
 vtkBivariateStatisticsAlgorithm.cxx
+vtkCirclePackLayoutStrategy.cxx
 vtkEdgeLayoutStrategy.cxx
 vtkGraphLayoutStrategy.cxx
 vtkStatisticsAlgorithm.cxx
