--- a/Infovis/Testing/Cxx/CMakeLists.txt
+++ b/Infovis/Testing/Cxx/CMakeLists.txt
@@ -9,6 +9,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
   SET(MyTests
     TestArcEdges
     TestAssignCoordinates
+    TestCirclePackLayoutStrategy
     TestCollapseVerticesByArray
     TestContingencyStatistics
     TestCorrelativeStatistics
