--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -52,6 +52,7 @@ ENDIF(NOT VTK_INSTALL_NO_DEVELOPMENT)
 # immediately.
 IF(WIN32 OR APPLE)
   TARGET_LINK_LIBRARIES (vtkPythonCore ${VTK_PYTHON_LIBRARIES})
+  TARGET_LINK_LIBRARIES (vtkPythonCore LINK_INTERFACE_LIBRARIES ${VTK_PYTHON_LIBRARIES})
 ENDIF(WIN32 OR APPLE)
 
 # Apply user-defined properties to the library targets.
@@ -254,6 +255,8 @@ IF(VTK_USE_FFMPEG_ENCODER)
 ENDIF(VTK_USE_FFMPEG_ENCODER)
 
 TARGET_LINK_LIBRARIES(vtkpython ${VTKPYTHON_LINK_LIBS})
+TARGET_LINK_LIBRARIES(vtkpython LINK_INTERFACE_LIBRARIES ${VTK_PYTHON_LIBRARIES})
+message("VTK_PYTHON_LIBRARIES ${VTK_PYTHON_LIBRARIES}")
 
 IF(VTK_USE_MATLAB_MEX)
   INCLUDE(${MATLAB_MEX_USE_FILE})
@@ -285,6 +288,7 @@ IF (VTK_USE_PARALLEL AND VTK_USE_MPI)
   SET(PVTKPYTHON_EXECUTABLE pvtkpython)
   VTK_ADD_EXECUTABLE(pvtkpython vtkParaPythonAppInit.cxx)
   TARGET_LINK_LIBRARIES(pvtkpython ${VTKPYTHON_LINK_LIBS} ${MPI_LIBRARIES})
+  TARGET_LINK_LIBRARIES(vtkpython LINK_INTERFACE_LIBRARIES ${VTK_PYTHON_LIBRARIES})
   IF(VTK_USE_MATLAB_MEX)
     INCLUDE(${MATLAB_MEX_USE_FILE})
     SET_TARGET_PROPERTIES(pvtkpython PROPERTIES
