ENH: Added Serialize/Deserialize for AMR box
Added a simple test case for the AMR box serialization
and deserialization functionality. Also, excluded the
AMR kit classes from wrapping.

--- a/AMR/CMakeLists.txt
+++ b/AMR/CMakeLists.txt
@@ -5,5 +5,9 @@ SET(UKIT AMR)
 ## Get the kit sources
 FILE( GLOB Kit_SRCS *.cxx )
 
+SET_SOURCE_FILES_PROPERTIES(
+  vtkAMRGridIndexEncoder
+  WRAP_EXCLUDE
+)
 ## Include CMAKE code common to all kits
 INCLUDE(${VTK_CMAKE_DIR}/KitCommonBlock.cmake )
