Fix typo in pvtkpython link interface call.

--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -287,7 +287,7 @@ IF (VTK_USE_PARALLEL AND VTK_USE_MPI)
   SET(PVTKPYTHON_EXECUTABLE pvtkpython)
   VTK_ADD_EXECUTABLE(pvtkpython vtkParaPythonAppInit.cxx)
   TARGET_LINK_LIBRARIES(pvtkpython ${VTKPYTHON_LINK_LIBS} ${MPI_LIBRARIES})
-  TARGET_LINK_LIBRARIES(vtkpython LINK_INTERFACE_LIBRARIES ${VTK_PYTHON_LIBRARIES})
+  TARGET_LINK_LIBRARIES(pvtkpython LINK_INTERFACE_LIBRARIES ${VTK_PYTHON_LIBRARIES})
   IF(VTK_USE_MATLAB_MEX)
     INCLUDE(${MATLAB_MEX_USE_FILE})
     SET_TARGET_PROPERTIES(pvtkpython PROPERTIES
