ENH/COMP: Minor bugfixes and compilation issues
Fixed construction of vtkHierarchicalDataSet and
added vtkAMR library to list of target link libraries.

--- a/Examples/AMR/Cxx/CMakeLists.txt
+++ b/Examples/AMR/Cxx/CMakeLists.txt
@@ -17,8 +17,7 @@ IF (VTK_USE_MPI)
     SET(MPI_LIBRARIES ${MPI_LIBRARIES} "${MPI_EXTRA_LIBRARY}")   
   ENDIF (MPI_EXTRA_LIBRARY) 
   
-  # Needed for mpich 2
-  ADD_DEFINITIONS("-DMPICH_IGNORE_CXX_SEEK")
+  ADD_DEFINITIONS("-DMPICH_IGNORE_CXX_SEEK -DASSERT_ON")
 
 ENDIF (VTK_USE_MPI)
 
