ENH:Filter to Convert ImageData to StructuredGrid
Initial commit of the vtkImageDataToStructuredGridFter

--- a/Filtering/CMakeLists.txt
+++ b/Filtering/CMakeLists.txt
@@ -6,6 +6,7 @@ SET(KIT_JAVA_LIBS vtkCommonJava)
 SET(KIT_INTERFACE_LIBRARIES vtkCommon)
 
 SET( Kit_SRCS
+vtkImageDataToStructuredGridFilter.cxx
 vtkAbstractCellLocator.cxx
 vtkAbstractInterpolatedVelocityField.cxx
 vtkAbstractMapper.cxx
