--- a/Imaging/Testing/Python/CMakeLists.txt
+++ b/Imaging/Testing/Python/CMakeLists.txt
@@ -57,7 +57,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         TestImageProjection
         TestInPlaceFilter
         TestIslandRemoval2D
-        TestLassooStencil
+        TestLassoStencil
         TestMapToRGBABlockStreaming
         TestMapToWindowLevelColors
         TestMapToWindowLevelColors2
