ENH: A polyplane implicit function
An implicit function to represent a finite polyplane, so that it can
be used to cut a dataset (with a vtkCutter)

--- a/Widgets/Testing/Cxx/CMakeLists.txt
+++ b/Widgets/Testing/Cxx/CMakeLists.txt
@@ -40,6 +40,7 @@ SET(MyTests
   TestDijkstraGraphGeodesicPath.cxx
   TestParallelopipedWidget.cxx
   TestSeedWidgetNonUniformRepresentations.cxx
+  TestPolyPlane.cxx
   vtkAngleWidgetTest1.cxx
   vtkBiDimensionalWidgetTest1.cxx
   vtkImplicitPlaneWidget2Test1.cxx
