ENH/BUGFIX: ImageData-To-StructuredGrid Updates
Inherited from vtkStructuredGridAlgorithm instead
of vtkDataSetAlgorithm. Fixed floating point issue
by setting the points array to be double precision.
Added simple example code that demonstrates the use
of the filter and a corresponding test for the filter.

--- a/Examples/AMR/Cxx/CMakeLists.txt
+++ b/Examples/AMR/Cxx/CMakeLists.txt
@@ -41,3 +41,12 @@ TARGET_LINK_LIBRARIES( AMRDataTransferPipeline
              vtkParallel
              ${MPI_LIBRARIES} 
              )
+             
+## Add TestImageDataToStructuredGridFilter
+ADD_EXECUTABLE( TestImageDataToStructuredGridFilter 
+                TestImageDataToStructuredGridFilter.cxx )
+TARGET_LINK_LIBRARIES(TestImageDataToStructuredGridFilter
+                      vtkGraphics
+                      vtkIO
+                      vtkFiltering 
+                      )
