--- a/Examples/Infovis/Cxx/CMakeLists.txt
+++ b/Examples/Infovis/Cxx/CMakeLists.txt
@@ -12,19 +12,21 @@ INCLUDE(${VTK_USE_FILE})
 ENDIF(NOT VTK_BINARY_DIR)
 
 ADD_EXECUTABLE(TreeLayout TreeLayout.cxx)
-TARGET_LINK_LIBRARIES(TreeLayout vtkViews vtkInfovis vtkRendering vtkImaging vtkIO)
+TARGET_LINK_LIBRARIES(TreeLayout vtkInfovis vtkRendering vtkImaging vtkIO)
 
-ADD_EXECUTABLE(HelloWorld HelloWorld.cxx)
-TARGET_LINK_LIBRARIES(HelloWorld vtkViews vtkInfovis vtkRendering vtkImaging vtkIO)
+IF(VTK_USE_VIEWS)
+  ADD_EXECUTABLE(HelloWorld HelloWorld.cxx)
+  TARGET_LINK_LIBRARIES(HelloWorld vtkViews vtkInfovis vtkRendering vtkImaging vtkIO)
 
-ADD_EXECUTABLE(Theme Theme.cxx)
-TARGET_LINK_LIBRARIES(Theme vtkViews vtkInfovis vtkRendering vtkImaging vtkIO)
+  ADD_EXECUTABLE(Theme Theme.cxx)
+  TARGET_LINK_LIBRARIES(Theme vtkViews vtkInfovis vtkRendering vtkImaging vtkIO)
 
-ADD_EXECUTABLE(CreateTree CreateTree.cxx)
-TARGET_LINK_LIBRARIES(CreateTree vtkViews vtkInfovis vtkRendering vtkImaging vtkIO)
+  ADD_EXECUTABLE(CreateTree CreateTree.cxx)
+  TARGET_LINK_LIBRARIES(CreateTree vtkViews vtkInfovis vtkRendering vtkImaging vtkIO)
 
-ADD_EXECUTABLE(MultiView MultiView.cxx)
-TARGET_LINK_LIBRARIES(MultiView vtkViews vtkInfovis vtkRendering vtkImaging vtkIO)
+  ADD_EXECUTABLE(MultiView MultiView.cxx)
+  TARGET_LINK_LIBRARIES(MultiView vtkViews vtkInfovis vtkRendering vtkImaging vtkIO)
+ENDIF(VTK_USE_VIEWS)
 
 # If Qt is enabled include the EasyView example
 IF(VTK_USE_QVTK)
