Apply VTK_LIBRARY_PROPERTIES to VPIC and Cosmo.
This enables such things as setting the proper .so version number on these libraries.

--- a/Utilities/Cosmo/CMakeLists.txt
+++ b/Utilities/Cosmo/CMakeLists.txt
@@ -38,6 +38,11 @@ INCLUDE_DIRECTORIES (${Cosmo_SOURCE_DIR} ${Cosmo_BINARY_DIR})
 VTK_ADD_LIBRARY(Cosmo ${Cosmo_SOURCES})
 TARGET_LINK_LIBRARIES(Cosmo vtksys vtkCommon ${Cosmo_LIBS})
 
+# Apply user-defined properties to the library target. Such as SO Version
+IF(VTK_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(Cosmo PROPERTIES ${VTK_LIBRARY_PROPERTIES})
+ENDIF(VTK_LIBRARY_PROPERTIES)
+
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS Cosmo
     EXPORT ${VTK_INSTALL_EXPORT_NAME}
