--- a/Utilities/VPIC/CMakeLists.txt
+++ b/Utilities/VPIC/CMakeLists.txt
@@ -32,6 +32,11 @@ TARGET_LINK_LIBRARIES(VPIC ${MPI_LIBRARY})
   ENDIF(MPI_EXTRA_LIBRARY)
 ENDIF(VTK_USE_MPI)
 
+# Apply user-defined properties to the library target. Such as SO Version
+IF(VTK_LIBRARY_PROPERTIES)
+  SET_TARGET_PROPERTIES(VPIC PROPERTIES ${VTK_LIBRARY_PROPERTIES})
+ENDIF(VTK_LIBRARY_PROPERTIES)
+
 IF(NOT VTK_INSTALL_NO_LIBRARIES)
   INSTALL(TARGETS VPIC
     EXPORT ${VTK_INSTALL_EXPORT_NAME}
