Fix vtkhdf5 header install rules.

--- a/Utilities/vtkhdf5/c++/src/CMakeLists.txt
+++ b/Utilities/vtkhdf5/c++/src/CMakeLists.txt
@@ -94,7 +94,7 @@ INSTALL (
     FILES
         ${CPP_HDRS}
     DESTINATION
-        include/cpp
+        ${VTK_INSTALL_INCLUDE_DIR_CM24}/vtkhdf5/cpp
 )
 ENDIF (NOT VTK_INSTALL_NO_DEVELOPMENT)
 
