--- a/Utilities/vtkhdf5/src/CMakeLists.txt
+++ b/Utilities/vtkhdf5/src/CMakeLists.txt
@@ -653,7 +653,7 @@ INSTALL (
         ${H5_PUBLIC_HEADERS}
         ${H5_PRIVATE_HEADERS}
     DESTINATION
-        include
+        ${VTK_INSTALL_INCLUDE_DIR_CM24}/vtkhdf5
 )
 ENDIF (NOT VTK_INSTALL_NO_DEVELOPMENT)
 
