COMP: Resolve linking issues on Macs
Added link libraries to AMR Kit to resolve some
linking issues.

Change-Id: Iaf34246337bb423dc2c47a5f98b0ac7eba0bca4e

--- a/AMR/CMakeLists.txt
+++ b/AMR/CMakeLists.txt
@@ -5,6 +5,9 @@ SET(UKIT AMR)
 ## Get the kit sources
 FILE( GLOB Kit_SRCS *.cxx )
 
+## Set the libraries required by this kit
+SET(KIT_LIBS vtkParallel vtkCommon vtkFiltering)
+
 SET_SOURCE_FILES_PROPERTIES(
   vtkAMRGridIndexEncoder
   vtkAMRLink
