--- a/Utilities/vtkmetaio/CMakeLists.txt
+++ b/Utilities/vtkmetaio/CMakeLists.txt
@@ -144,7 +144,14 @@ IF(METAIO_FOR_VTK)
 ELSE(METAIO_FOR_VTK)
   IF(METAIO_FOR_ITK)
     IF(NOT ITK_INSTALL_NO_LIBRARIES)
+      SET(ITK_INSTALL_RULE_ARGS)
+
+      IF(ITK_INSTALL_EXPORT_NAME)
+         LIST(APPEND ITK_INSTALL_RULE_ARGS EXPORT ${ITK_INSTALL_EXPORT_NAME})
+      ENDIF(ITK_INSTALL_EXPORT_NAME)
+
       INSTALL(TARGETS ${METAIO_NAMESPACE}
+              ${ITK_INSTALL_RULE_ARGS}
               RUNTIME DESTINATION ${ITK_INSTALL_BIN_DIR_CM24} 
                       COMPONENT RuntimeLibraries
               LIBRARY DESTINATION ${ITK_INSTALL_LIB_DIR_CM24} 
