MetaIO: Remove unused KWSys references

--- a/Utilities/vtkmetaio/CMakeLists.txt
+++ b/Utilities/vtkmetaio/CMakeLists.txt
@@ -78,16 +78,14 @@ IF(METAIO_FOR_VTK)
   IF(BUILD_SHARED_LIBS)
     ADD_DEFINITIONS(-Dvtkmetaio_BUILD_SHARED_LIBS)
   ENDIF(BUILD_SHARED_LIBS)
-  TARGET_LINK_LIBRARIES(${METAIO_NAMESPACE} ${VTK_ZLIB_LIBRARIES}
-                                            ${KWSYS_NAMESPACE})
+  TARGET_LINK_LIBRARIES(${METAIO_NAMESPACE} ${VTK_ZLIB_LIBRARIES})
   IF(VTK_LIBRARY_PROPERTIES)
     SET_TARGET_PROPERTIES(${METAIO_NAMESPACE} 
                           PROPERTIES ${VTK_LIBRARY_PROPERTIES})
   ENDIF(VTK_LIBRARY_PROPERTIES)
 ELSE(METAIO_FOR_VTK)
   IF(METAIO_FOR_ITK)
-    TARGET_LINK_LIBRARIES(${METAIO_NAMESPACE} ${ITK_ZLIB_LIBRARIES} 
-                                              ${KWSYS_NAMESPACE})
+    TARGET_LINK_LIBRARIES(${METAIO_NAMESPACE} ${ITK_ZLIB_LIBRARIES})
     IF(ITK_USE_LIBXML2)    
       TARGET_LINK_LIBRARIES(${METAIO_NAMESPACE} ${ITK_LIBXML2_LIBRARIES})
     ENDIF(ITK_USE_LIBXML2)   
@@ -97,8 +95,7 @@ ELSE(METAIO_FOR_VTK)
                             PROPERTIES ${ITK_LIBRARY_PROPERTIES})
     ENDIF(ITK_LIBRARY_PROPERTIES)
   ELSE(METAIO_FOR_ITK)
-    TARGET_LINK_LIBRARIES(${METAIO_NAMESPACE} ${ZLIB_LIBRARIES}
-                                              ${KWSYS_NAMESPACE})
+    TARGET_LINK_LIBRARIES(${METAIO_NAMESPACE} ${ZLIB_LIBRARIES})
   ENDIF(METAIO_FOR_ITK)
 ENDIF(METAIO_FOR_VTK)
 
