--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -39,6 +39,7 @@ ADD_SUBDIRECTORY(verdict)
 
 ADD_SUBDIRECTORY(vtknetcdf)
 IF(VTK_USE_METAIO)
+  SET(METAIO_FOR_VTK 1)
   ADD_SUBDIRECTORY(vtkmetaio)
   SET_PROPERTY(GLOBAL APPEND PROPERTY VTK_TARGETS vtkmetaio)
 ENDIF(VTK_USE_METAIO)
