--- a/Parallel/CMakeLists.txt
+++ b/Parallel/CMakeLists.txt
@@ -23,6 +23,7 @@ IF(VTK_HAS_EXODUS)
 ENDIF(VTK_HAS_EXODUS)
 
 SET ( Kit_SRCS
+vtkAMRUtilities.cxx
 vtkBranchExtentTranslator.cxx
 vtkCachingInterpolatedVelocityField.cxx
 vtkClientServerSynchronizedRenderers.cxx
@@ -126,6 +127,7 @@ IF(VTK_HAS_EXODUS)
 ENDIF(VTK_HAS_EXODUS)
 
 SET_SOURCE_FILES_PROPERTIES(
+vtkAMRUtilities
 vtkCommunicator 
 vtkMultiProcessController
 vtkMultiProcessStream
