--- a/Imaging/Testing/Tcl/CMakeLists.txt
+++ b/Imaging/Testing/Tcl/CMakeLists.txt
@@ -15,6 +15,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         ResliceInformationInput
         ResliceInterpolationModes
         ResliceInterpolationOblique
+        ResliceLanczosKaiser
         ResliceMirrorOblique
         ResliceMirrorPad
         ResliceOptimizationOff
