ENH: Add new class vtkImageResliceToColors.
This class will feed the floating-point interpolated scalars
directly through the lookup table, so it provides better efficiency
and quality than using vtkImageMapToColors after vtkImageReslice.

--- a/Imaging/CMakeLists.txt
+++ b/Imaging/CMakeLists.txt
@@ -91,6 +91,7 @@ vtkImageRange3D.cxx
 vtkImageRectilinearWipe.cxx
 vtkImageResample.cxx
 vtkImageReslice.cxx
+vtkImageResliceToColors.cxx
 vtkImageSeedConnectivity.cxx
 vtkImageSeparableConvolution.cxx
 vtkImageShiftScale.cxx
