--- a/Imaging/Testing/Python/CMakeLists.txt
+++ b/Imaging/Testing/Python/CMakeLists.txt
@@ -22,6 +22,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         ResliceOptimizationOff
         ReslicePermutations
         ReslicePermuteResample
+        ResliceToColors
         ResliceWrapOblique
         ResliceWrapPad
         Spectrum
