--- a/Imaging/Testing/Tcl/CMakeLists.txt
+++ b/Imaging/Testing/Tcl/CMakeLists.txt
@@ -21,6 +21,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
         ResliceOptimizationOff
         ReslicePermutations
         ReslicePermuteResample
+        ResliceToColors
         ResliceWrapOblique
         ResliceWrapPad
         Spectrum
