--- a/Widgets/CMakeLists.txt
+++ b/Widgets/CMakeLists.txt
@@ -4,7 +4,7 @@ SET(UKIT WIDGETS)
 SET(KIT_TCL_LIBS vtkRenderingTCL vtkHybridTCL)
 SET(KIT_PYTHON_LIBS vtkRenderingPythonD vtkHybridPythonD)
 SET(KIT_JAVA_LIBS vtkRenderingJava vtkHybridJava)
-SET(KIT_INTERFACE_LIBRARIES vtkRendering vtkHybrid)
+SET(KIT_INTERFACE_LIBRARIES vtkRendering vtkHybrid vtkVolumeRendering)
 SET(KIT_LIBS ${OPENGL_gl_LIBRARY})
 
 IF (VTK_OPENGL_HAS_OSMESA AND OSMESA_LIBRARY)
@@ -35,6 +35,8 @@ vtkBoundedPlanePointPlacer.cxx
 vtkBoxRepresentation.cxx
 vtkBoxWidget.cxx
 vtkBoxWidget2.cxx
+vtkButtonRepresentation.cxx
+vtkButtonWidget.cxx
 vtkCameraRepresentation.cxx
 vtkCameraWidget.cxx
 vtkCaptionRepresentation.cxx
@@ -95,6 +97,7 @@ vtkOrientedPolygonalHandleRepresentation3D.cxx
 vtkPolygonalSurfacePointPlacer.cxx
 vtkPolyDataContourLineInterpolator.cxx
 vtkPolygonalSurfaceContourLineInterpolator.cxx
+vtkProp3DButtonRepresentation.cxx
 vtkRectilinearWipeRepresentation.cxx
 vtkRectilinearWipeWidget.cxx
 vtkScalarBarRepresentation.cxx
@@ -117,6 +120,8 @@ vtkTensorProbeRepresentation.cxx
 vtkTerrainDataPointPlacer.cxx
 vtkTerrainContourLineInterpolator.cxx
 vtkTextRepresentation.cxx
+vtkTexturedButtonRepresentation.cxx
+vtkTexturedButtonRepresentation2D.cxx
 vtkTextWidget.cxx
 vtkWidgetCallbackMapper.cxx
 vtkWidgetEvent.cxx
@@ -133,6 +138,7 @@ vtkAbstractPolygonalHandleRepresentation3D
 vtkAffineRepresentation
 vtkAngleRepresentation
 vtkBiDimensionalRepresentation
+vtkButtonRepresentation
 vtkContinuousValueWidget
 vtkContinuousValueWidgetRepresentation
 vtkContourLineInterpolator
