ENH: Add an image flood fill filter.
Change-Id: I5500edb3b5818c920ff094d52e726a920f0b8d8b

--- a/Imaging/CMakeLists.txt
+++ b/Imaging/CMakeLists.txt
@@ -108,6 +108,7 @@ vtkImageStencilAlgorithm.cxx
 vtkImageStencilData.cxx
 vtkImageStencilSource.cxx
 vtkImageThreshold.cxx
+vtkImageThresholdConnectivity.cxx
 vtkImageToImageStencil.cxx
 vtkImageTranslateExtent.cxx
 vtkImageVariance3D.cxx
