--- a/AMR/CMakeLists.txt
+++ b/AMR/CMakeLists.txt
@@ -1,6 +1,10 @@
 ## Set the Kit name
 SET(KIT AMR)
 SET(UKIT AMR)
+SET(KIT_TCL_LIBS vtkCommonTCL)
+SET(KIT_PYTHON_LIBS vtkCommonPythonD)
+SET(KIT_JAVA_LIBS vtkCommonJava)
+SET(KIT_INTERFACE_LIBRARIES vtkCommon)
 
 ## Get the kit sources
 FILE( GLOB Kit_SRCS *.cxx )
