ENH: Add test for RGB color conversions.

--- a/Graphics/Testing/Cxx/CMakeLists.txt
+++ b/Graphics/Testing/Cxx/CMakeLists.txt
@@ -26,6 +26,7 @@ IF (VTK_USE_RENDERING AND VTK_USE_DISPLAY)
     TestHyperOctreeDual.cxx
     TestHyperOctreeSurfaceFilter.cxx
     TestHyperOctreeToUniformGrid.cxx
+    TestMapVectorsAsRGBColors.cxx
     TestNamedComponents.cxx
     TestMeanValueCoordinatesInterpolation1.cxx
     TestMeanValueCoordinatesInterpolation2.cxx
